# wb-stock-price-updater

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  FIX_SCHEDULER.md  README.md  SUPABASE_SCHEMA.md  TESTING.md  code.py  pyproject.toml  requirements.txt  test_slack_notification.py  test_sync_stocks_name.sh
.cursor/plans/: fdr_목록_동기화_파이프라인_66bbdb04.plan.md  stocks_name_동기화+조회_최적화_6f1cb6e4.plan.md  stocks_name_테이블_동기화_2c7acf47.plan.md  아파트_실거래가_api_구현_a04e32dc.plan.md  환율인덱스_데이터_수집_2fc5c03e.plan.md
.github/workflows/: schedule-stock-list.yml
app/: cli.py  config.py  exceptions.py  main.py  rate_limiter.py  supabase_client.py  yahoo_finance.py
app/api/: dependencies.py  routes.py
app/repositories/: __init__.py  supabase_client.py
app/services/: apt_sales_service.py  exchange_rates_service.py  stock_service.py  yahoo_finance.py
app/services/listings/: __init__.py  fdr_listings.py
app/utils/: logging_config.py  slack_notifier.py
explanation_files/: API_ENDPOINTS_GUIDE.md  APT_SALES_API_GUIDE.md  BACKEND_ARCHITECTURE.md  DOCKER_REBUILD.md  DOCKER_RUN.md  EXCHANGE_RATE_PROCESS.md  FRONTEND_INTEGRATION.md  STOCKS_NAME_ENDPOINTS_EXPLANATION.md  SUPABASE_SCHEMA.md  SYNC_STOCKS_NAME_PURPOSE.md  SYSTEM_ROLES_AND_FLOW.md  TESTING.md  TEST_DEPLOYED.md
