[project]
name = "wb-stock-price-updater"
version = "0.1.0"
description = "Yahoo Finance API를 사용하여 주식 가격을 수집하고 Supabase에 저장하는 Python 백엔드 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "yfinance==0.2.47",
    "supabase==2.10.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
]

[project.optional-dependencies]
dev = []

[project.scripts]
app = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8080"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
